@@ -1,3 +1,8 @@
+2014-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* kpse-cxx-hack.m4: Adapt for 32- and 64-bit Cygwin.
+	From Ken Brown <kbrow1i@gmail.com>.
+
 2014-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* kpse-luajit-flags.m4: Simplify.
